force-app/main/default/objects/BuiltNew__c/BuiltNew__c.object-meta.xml
<CustomObject>
    <label>BuiltNew</label>
    <pluralLabel>BuiltNews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>BuiltNew Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>