force-app/main/default/objects/BuiltNew__c/fields/Is_read__c.field-meta.xml
<CustomField>
    <fullName>Is_read__c</fullName>
    <label>Is read</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>