force-app/main/default/objects/BuiltNew__c/fields/Seed__c.field-meta.xml
<CustomField>
    <fullName>Seed__c</fullName>
    <label>Seed</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>