force-app/main/default/objects/BuiltNew__c/fields/Style__c.field-meta.xml
<CustomField>
    <fullName>Style__c</fullName>
    <label>Style</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>