force-app/main/default/objects/BuiltNew__c/fields/Title_image__c.field-meta.xml
<CustomField>
    <fullName>Title_image__c</fullName>
    <label>Title image</label>
    <type>Text</type>
    <length>255</length>
</CustomField>